# course_work_5

./: .gitignore  README.md  main.py  pyproject.toml
src/: api_hh.py  db_manager.py  user_interaction.py  utils.py
